--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ main .tit {
     color: inherit;
 }
 
-.contact-cont .descript: {
+.contact-cont .descript {
     width: 80%;
     line-height: 1.4;
 }
@@ -187,4 +187,15 @@ main .tit {
     display: flex;
     align-items: center;
     gap: 12px;
+}
+
+footer {
+    border-top: 1px solid #8d9299;
+    width: Calc(100% - 20px);
+    margin: auto;
+    height: 72px;
+    color:#8d9299;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
